# patient-administrative-outcomes-predictive-model

./: .gitignore  README.md  app.ipynb  main-archive.ipynb  main.ipynb  pg_scripts.sql  pyproject.toml
schema/: Condition.json  Encounter.json  Patient.json  Procedure.json
sql_queries/: bronze.resource.ddl.sql  gold.encounter.ddl.sql  gold.encounter.load.sql  lace_score.sql  silver.condition-risk.ddl.sql  silver.condition-risk.load.sql  silver.condition-rollup.ddl.sql  silver.condition-rollup.load.sql  silver.condition-standard.ddl.sql  silver.condition-standard.load.sql  silver.condition.ddl.sql  silver.condition.load.sql  silver.encounter.ddl.sql  silver.encounter.load.sql  silver.patient.ddl.sql  silver.patient.load.sql
streamlit/: Dashboard.py  analysis.ipynb
streamlit/pages/: Calculate_CCI_Score.py  Predictive_Model_vs_LACE_Index.py  main.py
